<resources>
    <string name="app_name">Palcon Booster</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="adsubscribed">AdSubscribed</string>
    <string name="per_6_month_subcription">com.paper.hdwallpaperapp.subscription</string>
    <string name="low_coins_mcg">Your coins are low so You cannot buy views</string>
    <string name="loading">Loading...</string>
    <string name="no_coins_exist">No coins exist!</string>
    <string name="done">Done</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_really_wanna_log_out">Do you really want to logout? \n\nNote: This will clear app data and the app will be closed!</string>
    <string name="yes">Yes</string>
    <string name="points">\"Points: \"</string>
    <string name="purchase_successfull">Purchase Successful!</string>
    <string name="purchasenotsuccessfull">Purchased was not successful!</string>
    <string name="addvideoforviews">Add your video for views</string>
    <string name="addvideoforlikes">Add your video for likes</string>
    <string name="advideoforsubscribers">Add your video for subscribers</string>
    <string name="pleaseenterurl">Please enter a url!</string>
    <string name="wrongurl">Wrong url!</string>
    <string name="subscribes">\" Subscribes\"</string>
    <string name="totasubscribes">Total Subscribes:</string>
    <string name="completesmall">complete:</string>
    <string name="likes">\" Likes\"</string>
    <string name="totallikes">Total Likes:</string>
    <string name="view">\" View\"</string>
    <string name="watchseconds">Watch Seconds:</string>
    <string name="doyoureallywantotodelete">Do you really want to delete this task?</string>
    <string name="no">No</string>
    <string name="likebracket">Like (</string>
    <string name="nodataexist">No data exist!</string>
    <string name="endoftasks">End of tasks!</string>
    <string name="callyoutubedataapi">Calling YouTube Data API ...</string>
    <string name="autoplay">Auto Play</string>
    <string name="autoplaydailylimit">\"Auto Play ( Daily Limit: \"</string>
    <string name="yourdailylimitreached">Your daily limit reached!</string>
    <string name="thisappneedstoaccessgooglecontacts">This app needs to access your Google account (via Contacts).</string>
    <string name="likedmark">Liked!</string>
    <string name="videoidmark">\"Video Id: \"</string>
    <string name="subscribebracket">Subscribe (</string>
    <string name="subscribedmark">Subscribed!</string>
    <string name="campaign_settings">Campaign Settings</string>
    <string name="number_of_subscribers">Number of Subscribers</string>
    <string name="number_of_likes">Number of Likes</string>
    <string name="number_of_views">Number of Views</string>
    <string name="time_required_seconds">Time Required (seconds)</string>
    <string name="vip_account_reduce_20">VIP account (reduce 20%)</string>
    <string name="total_coins">Total coins:</string>
    <string name="donee">done</string>
    <string name="note_your_coins_will_be_deducted_after_you_create_this_campaign_nthis_action_cannot_be_undone">Note: Your coins will be deducted after you create this campaign.\nThis action cannot be undone</string>
    <string name="welcome">Welcome!</string>
    <string name="benefits">BENEFITS</string>
    <string name="_20_off_on_campaigns_nincreased_daily_limits_50_nremove_ads">20% Off on Campaigns \nIncreased Daily Limits (+50)\nRemove Ads</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_month_save_40">1 Month (Save 40%)</string>
    <string name="_3_months_save_50">3 Months (Save 50%)</string>
    <string name="note_subscriptions_are_renewed_according_to_specified_period_in_case_you_want_to_stop_renew_at_anytime_you_must_enter_google_play_store_menu_subscriptions_palcon_booster_cancel_subscription">Note: Subscriptions are renewed according to specified period. In case you want to stop, renew at anytime, you must enter Google Play Store - Menu - Subscriptions - Palcon Booster - Cancel Subscription</string>
    <string name="campaignn">Campaign</string>
    <string name="pointss">Points</string>
    <string name="add_your_video">Add your video</string>
    <string name="input_youtube_video_url">Input Youtube video url</string>
    <string name="add">add</string>
    <string name="how_to_get_link_open_your_video_on_yt_share_button_copy_link"><![CDATA[How to get link: open your video on YT -> share button -> copy link]]></string>
    <string name="choose">Choose</string>
    <string name="choosee">choose</string>
    <string name="how_was_your_experience_with_us">How was your experience with us?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="no_campaign">No Campaign</string>
    <string name="your_campaign_appears_here_click_add_button_to_create_campaign_to_get_subscribers_for_your_channel">Your campaign appears here. Click add button to create campaign to get subscribers for your channel.</string>
    <string name="buy_points">buy points</string>
    <string name="vip_membership">vip membership</string>
    <string name="leave_feedback">leave feedback</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="personal_information">Personal information</string>
    <string name="subscribe">subscribe</string>
    <string name="autoplayy">Autoplay</string>
    <string name="turn_on_automatic_dialing_and_get_20_reduction_in_points">(Turn on automatic dialing and get 20% reduction in points)</string>
    <string name="watch_next">Watch next</string>
    <string name="buy_pointss">Buy Points</string>
    <string name="campaigns">Campaigns</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="points_loading">Points: loading…</string>
    <string name="auto_playy">Auto play</string>
    <string name="see_next">see next</string>
    <string name="subscribee">Subscribe</string>
    <string name="likee">Like</string>
    <string name="vieww">View</string>
</resources>