<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.VipActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:elevation="4dp">

        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_logo_viewplus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="casual"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="25sp" />

        </LinearLayout>-->

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/ic_header_white"
            android:layout_gravity="center_vertical"
            android:layout_toStartOf="@id/endLayoutBottom"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/endLayoutBottom"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coins_text_view_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_coin" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/cardLayout"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_logo_viewplus" />

                    <TextView
                        style="@style/textviewStyle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/benefits" />

                    <TextView
                        style="@style/textviewStyle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/_20_off_on_campaigns_nincreased_daily_limits_50_nremove_ads"
                        android:textSize="20sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/cardLayout"
                android:id="@+id/one_week_vip"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout style="@style/relativeLayout">

                    <LinearLayout style="@style/linearLayout">

                        <TextView
                            style="@style/textviewStyle"
                            android:text="@string/_1_week"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="1.99$"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/red"
                        app:cornerRadius="10dp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/cardLayout"
                app:cardCornerRadius="25dp"
                android:id="@+id/one_month_vip"
                app:cardElevation="10dp">

                <RelativeLayout style="@style/relativeLayout">

                    <LinearLayout style="@style/linearLayout">

                        <TextView
                            style="@style/textviewStyle"

                            android:text="@string/_1_month_save_40"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="4.99$"
                        android:textColor="@color/black"
                        android:textSize="20sp"

                        android:textStyle="bold"
                        app:backgroundTint="@color/red"
                        app:cornerRadius="10dp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/cardLayout"
                app:cardCornerRadius="25dp"
                android:id="@+id/three_months_vip"
                app:cardElevation="10dp">

                <RelativeLayout style="@style/relativeLayout">

                    <LinearLayout style="@style/linearLayout">

                        <TextView
                            style="@style/textviewStyle"
                            android:text="@string/_3_months_save_50"

                            android:textSize="20sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="11.99$"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/red"
                        app:cornerRadius="10dp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/cardLayout"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout style="@style/relativeLayout">

                    <LinearLayout style="@style/linearLayout">

                        <TextView
                            style="@style/textviewStyle"
                            android:layout_marginVertical="20dp"

                            android:text="@string/note_subscriptions_are_renewed_according_to_specified_period_in_case_you_want_to_stop_renew_at_anytime_you_must_enter_google_play_store_menu_subscriptions_palcon_booster_cancel_subscription"
                            android:textColor="@color/gray"
                            android:textSize="20sp" />

                    </LinearLayout>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>